<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<group android:id="@+id/grpQuit">
    <item
        android:id="@+id/action_quit"
        android:title="@string/menu_quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_version"
        android:title="@string/menu_version"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_start"
        android:title="@string/auto_Start"
        android:checkable="true"
        app:showAsAction="never"
        />

</group>
<group android:id="@+id/grpUnEnroll">
    <item
        android:id="@+id/action_unEnroll"
        android:title="@string/menu_un_enroll"
        app:showAsAction="never" />


</group>

    <group
        android:id="@+id/grpLanguage"
        android:visible="false">

        <item
            android:id="@+id/menu_english"
            android:checkable="true"
            android:title="@string/english"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_spanish"
            android:checkable="true"
            android:title="@string/spanish"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_french"
            android:checkable="true"
            android:title="@string/french"
            app:showAsAction="never" />

    </group>
</menu>