<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".ui.TokenizationMethodActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:stateListAnimator="@null">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/toolbar_margin_horizontal"
            android:background="@color/transparent"
            android:layoutDirection="rtl" />
    </com.google.android.material.appbar.AppBarLayout>

<TextView
    android:id="@+id/tokenization_step"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/tokenization_step"
    android:theme="@style/TextViewSubTitleStyle" />

<TextView
    android:id="@+id/tokenization_method_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tokenization_step"
    android:text="@string/tokenization_method_title"
    android:theme="@style/TextViewTitleStyle" />


    <RadioGroup
        android:id="@+id/tokenization_method_radio_group"
        style="@style/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/tokenization_method_radio_button_emv_card"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tokenization_method_emv" />

        <RadioButton
            android:id="@+id/tokenization_method_radio_button_fidelity"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tokenization_method_fidelity" />

    </RadioGroup>

<TextView
    android:id="@+id/tokenization_method_error"
    style="@style/TextViewErrorMessageStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/tokenization_method_next"
    android:layout_marginBottom="@dimen/default_margin_vertical"
    android:text="" />

<Button
    android:id="@+id/tokenization_method_next"
    android:layout_width="@dimen/button_width"
    android:layout_height="@dimen/button_height"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginHorizontal="@dimen/default_margin_horizontal"
    android:text="@string/confirm"
    android:theme="@style/Button" />
</RelativeLayout>
