<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".ui.UnEnrollementActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:stateListAnimator="@null">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/toolbar_margin_horizontal"
            android:background="@color/transparent"
            android:layoutDirection="rtl" />
    </com.google.android.material.appbar.AppBarLayout>

<TextView
    android:id="@+id/un_enroll_step"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/un_enroll_step"
    android:theme="@style/TextViewSubTitleStyle" />

<TextView
    android:id="@+id/un_enroll_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/un_enroll_step"
    android:gravity="top|center"
    android:text="@string/un_enroll_title"
    android:theme="@style/TextViewTitleStyle" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    android:layout_marginBottom="@dimen/default_margin_vertical"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/un_enroll_pvp_auth"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:text="@string/un_enroll_pvp_auth"
        android:theme="@style/Button" />

    <Button
        android:id="@+id/un_enroll_phone_auth"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:text="@string/un_enroll_phone_auth"
        android:theme="@style/Button" />
</LinearLayout>
</RelativeLayout>
